--- a/my web3.html
+++ b/my web3.html
@@ -10,7 +10,7 @@
         <header>
  <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
             <div id="popupMenu" class="popup-menu">
-                <a href="my website.html" onclick="toggleMenu()">Home</a>
+                <a href="index.html" onclick="toggleMenu()">Home</a>
                 <a href="about.html" onclick="toggleMenu()">About</a>
                 <a href="https://portals.iucn.org/library/sites/library/files/documents/2010-073.pdf" onclick="toggleMenu()">Download</a>
             </div>
@@ -130,4 +130,5 @@ function toggleMenu() {
         <footer>
             <p>&copy; 2025 Nature Ghana. All rights reserved.</p>
         </footer>
+
     </body>
