--- a/aburi.html
+++ b/aburi.html
@@ -13,7 +13,7 @@
         </header>
         <nav>
             <ul>
-                <li><a class="home-link" href="my website.html">Home</a></li>
+                <li><a class="home-link" href="index.html">Home</a></li>
                 <li><a class="about-link"href="about.html">About</a></li>
                 
             </ul>
@@ -39,4 +39,5 @@
             <img src="mid.jpg" width="350" height="350"> </a>
             <br> 
             </body>
+
             </html>
