--- a/bia.html
+++ b/bia.html
@@ -12,7 +12,7 @@
         </header>
         <nav>
             <ul>
-                <li><a class="home-link" href="my website.html">Home</a></li>
+                <li><a class="home-link" href="index.html">Home</a></li>
                 <li><a class="about-link"href="about.html">About</a></li>
  <h3>Bia National Park</h3>
             Bia National Park is a national park in the Bia district in the Western Region of Ghana. It also a biosphere
@@ -45,3 +45,4 @@
             </nav>
             </body>
             </html>
+
