--- a/bomfobiri.html
+++ b/bomfobiri.html
@@ -12,7 +12,7 @@
         </header>
         <nav>
             <ul>
-                <li><a class="home-link" href="my website.html">Home</a></li>
+                <li><a class="home-link" href="index.html">Home</a></li>
                 <li><a class="about-link"href="about.html">About</a></li>
                 
             </ul>
@@ -53,4 +53,5 @@ It is best to see the animals at the Bomfobiri Wildlife Sanctuary during the mon
 
             </p>
             </body>
+
             </html>
