--- a/mole.html
+++ b/mole.html
@@ -12,7 +12,7 @@
         </header>
         <nav>
             <ul>
-                <li><a class="home-link" href="my website.html">Home</a></li>
+                <li><a class="home-link" href="index.html">Home</a></li>
                 <li><a class="about-link"href="about.html">About</a></li>
                 
             </ul>
@@ -58,5 +58,6 @@
             <img src="img_20191025_071953_639954736284.webp" width="350" height="350"> </a>
 <a href="img_20191025_072030_045877446407.webp" target="_blank">
             <img src="img_20191025_072030_045877446407.webp" width="350" height="350"> </a>
+
 
         </p>
