--- a/paga.html
+++ b/paga.html
@@ -12,7 +12,7 @@
         </header>
         <nav>
             <ul>
-                <li><a class="home-link" href="my website.html">Home</a></li>
+                <li><a class="home-link" href="index.html">Home</a></li>
                 <li><a class="about-link"href="about.html">About</a></li>
                 <h3>Paga Crocodile Pond</h3>
 <p>Paga Crocodile Pond is a sacred pond in Paga in the Upper East Region of Ghana, and is 44 
@@ -32,4 +32,5 @@
      <a href="Crocodile-Pond-2.jpg" target="_blank">
             <img src="Crocodile-Pond-2.jpg" width="350" height="350"> </a>
 <a href="crocodiles.jpg" target="_blank">
+
             <img src="crocodiles.jpg" width="350" height="350"> </a>
