--- a/shai.html
+++ b/shai.html
@@ -12,7 +12,7 @@
         </header>
         <nav>
             <ul>
-                <li><a class="home-link" href="my website.html">Home</a></li>
+                <li><a class="home-link" href="index.html">Home</a></li>
                 <li><a class="about-link"href="about.html">About</a></li>
                 
             </ul>
@@ -51,3 +51,4 @@
             </p>
             </body>
             </html>
+
