--- a/tafi.html
+++ b/tafi.html
@@ -12,7 +12,7 @@
         </header>
         <nav>
             <ul>
-                <li><a class="home-link" href="my website.html">Home</a></li>
+                <li><a class="home-link" href="index.html">Home</a></li>
                 <li><a class="about-link"href="about.html">About</a></li>
 <h3>Tafi Monkey Village</h3>
     <p>Tafi Monkey Village is a traditional sacred grove conservation established in 1993 under the direction of a Peace
@@ -58,4 +58,5 @@
             </ul>
             </nav>
             </body>
+
             </html>
