--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         </header>
         <nav>
             <ul>
-                <li><a class="home-link" href="my website.html">Home</a></li>
+                <li><a class="home-link" href="index.html">Home</a></li>
                 <li><a class="about-link"href="#">About</a></li>
                 <p>Nature reserves in Ghana play a vital role in protecting the country's unique
                     wildlife and natural habitats. These areas are set aside to conserve biodiversity,
@@ -41,4 +41,5 @@
             <p>&copy; 2025 My Website</p>
         </footer>
     </body>
+
     </html>
