--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li><a class="home-link" href="index.html">Home</a></li>
-                <li><a class="about-link"href="#">About</a></li>
+                <li><a class="about-link"href="about.html">About</a></li>
                 <p>Nature reserves in Ghana play a vital role in protecting the country's unique
                     wildlife and natural habitats. These areas are set aside to conserve biodiversity,
                     support research, and promote eco-tourism. From Mole National Park in the north to
@@ -43,3 +43,4 @@
     </body>
 
     </html>
+
