--- a/my web4.html
+++ b/my web4.html
@@ -111,7 +111,7 @@ function toggleMenu() {
             <a href="tel:0248286530"><i class="fa fa-phone"></i>Phone</a>
             <a href="mail:godwinabedi4@gmail.com"><i class="fa fa-envelope"></i>Email</a>
             <a href="https://wa.me/0248286530" target="_blank" class="whatsapp"><i class="fab fa-whatsapp"></i>Whatsapp</a>
-            <a href="https://www.tiktok.com/cash3781" target="_blank"><i class="fab fa-tiktok"></i>Tiktok</a>
+            <a href="https://www.tiktok.com/@cash3781?lang=en" target="_blank"><i class="fab fa-tiktok"></i>Tiktok</a>
     
             </section>
         <footer>
@@ -120,4 +120,5 @@ function toggleMenu() {
     </body>
 
     </html>
+
 
