--- a/aburi.html
+++ b/aburi.html
@@ -31,8 +31,8 @@
             <br>
             <a href="aburi.jpg" target="_blank">
             <img src="aburi.jpg" width="350" height="350"> </a>
-            <a href="palms.jpg" target="_blank">
-            <img src="palms.jpg" width="350" height="350"> </a>
+            <a href="Palms.jpg" target="_blank">
+            <img src="Palms.jpg" width="350" height="350"> </a>
             <a href="aburi.jpeg" target="_blank">
             <img src="aburi.jpeg" width="350" height="350"> </a> <br>
             <a href="mid.jpg" target="_blank">
@@ -41,3 +41,4 @@
             </body>
 
             </html>
+
