--- a/aburi.html
+++ b/aburi.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My simple website</title>
+    <title>Nature reserves in Ghana</title>
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -41,4 +41,5 @@
             </body>
 
             </html>
+
 
