--- a/atewa.html
+++ b/atewa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My simple website</title>
+    <title>Nature reserves in Ghana</title>
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -57,4 +57,5 @@
      </p>
      </body>
      </html>
+
 
