--- a/bomfobiri.html
+++ b/bomfobiri.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My simple website</title>
+    <title>Nature reserves in Ghana</title>
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -55,3 +55,4 @@ It is best to see the animals at the Bomfobiri Wildlife Sanctuary during the mon
             </body>
 
             </html>
+
