--- a/my website2.html
+++ b/my website2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My simple website</title>
+    <title>Nature reserves in Ghana</title>
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -135,5 +135,6 @@ function toggleMenu() {
 
         </body>
         </html>
+
 
 
