--- a/paga.html
+++ b/paga.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My simple website</title>
+    <title>Nature reserves in Ghana</title>
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -34,3 +34,4 @@
 <a href="crocodiles.jpg" target="_blank">
 
             <img src="crocodiles.jpg" width="350" height="350"> </a>
+
