--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section>
             <div class="leaf-border-card">
                 <h3>🌿What is a Nature Reserve?</h3>
-            <p>Nature Reserve is a protected area designated for the concervation of wildlife, plants and natural habitats.
+            <p>Nature Reserve is a protected area designated for the conservation of wildlife, plants and natural habitats.
                 These areas are established to safeguard biodiversity, preserve ecosystems and sometimes support scientific research and 
                 education.
                 These can be managed by governments, private organizations, or conservation groups, and they often have restrictions 
