--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nature reserves in Ghana</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     </head>
     <body>
         <header>
@@ -31,10 +32,10 @@
                    
         <section id="contact">
             <h3>Connect with us</h3>
-            <a href="tel:0248286530"><i class="fa fa-phone"></i>Phone</a>
-            <a href="mail:godwinabedi4@gmail.com"><i class="fa fa-envelope"></i>Email</a>
-            <a href="https://wa.me/0248286530" target="_blank" class="whatsapp"><i class="fab fa-whatsapp"></i>Whatsapp</a>
-            <a href="https://www.tiktok.com/cash3781" target="_blank"><i class="fab fa-tiktok"></i>Tiktok</a>
+            <a href="tel:0248286530"><i class="fa fa-phone"></i></a>
+            <a href="mail:godwinabedi4@gmail.com"><i class="fa fa-envelope"></i></a>
+            <a href="https://wa.me/0248286530" target="_blank" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://www.tiktok.com/cash3781" target="_blank"><i class="fab fa-tiktok"></i></a>
     
             </section>
         <footer>
@@ -43,5 +44,6 @@
     </body>
 
     </html>
+
 
 
